// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<EmailInput /> with a non valid value passed in 1`] = `
<input
  autoComplete="false"
  className="mui-mi-input-field mui-mi-input-field-has-error"
  onBlur={[Function]}
  onChange={[Function]}
  placeholder="Enter email"
  type="text"
  value="bill@gmail"
/>
`;

exports[`<EmailInput /> with a non-email value passed in 1`] = `
<input
  autoComplete="false"
  className="mui-mi-input-field mui-mi-input-field-has-error"
  onBlur={[Function]}
  onChange={[Function]}
  placeholder="Enter email"
  type="text"
  value="4593.3"
/>
`;

exports[`<EmailInput /> with a required attribute 1`] = `
<input
  autoComplete="false"
  className="mui-mi-input-field mui-mi-input-field-has-error"
  onBlur={[Function]}
  onChange={[Function]}
  placeholder="Enter email"
  required={true}
  type="text"
  value=""
/>
`;

exports[`<EmailInput /> with a valid value passed in 1`] = `
<input
  autoComplete="false"
  className="mui-mi-input-field"
  onBlur={[Function]}
  onChange={[Function]}
  placeholder="Enter email"
  type="text"
  value="bill@gmail.com"
/>
`;

exports[`<EmailInput /> with autocomplete enabled 1`] = `
<input
  autoComplete="true"
  className="mui-mi-input-field"
  onBlur={[Function]}
  onChange={[Function]}
  placeholder="Enter email"
  type="text"
  value=""
/>
`;

exports[`<EmailInput /> with no props 1`] = `
<input
  autoComplete="false"
  className="mui-mi-input-field"
  onBlur={[Function]}
  onChange={[Function]}
  placeholder="Enter email"
  type="text"
  value=""
/>
`;

exports[`Email with a custom placeholder 1`] = `
<input
  autoComplete="false"
  className="mui-mi-input-field"
  onBlur={[Function]}
  onChange={[Function]}
  placeholder="Test Placeholder"
  type="text"
  value=""
/>
`;
